# AvatarWebcam

./: .gitignore  README.md  README.txt  THIRD_PARTY_NOTICES.txt  bridge.py  build.bat  build_no_pause.bat  launcher.py  logging_setup.py  main.py  opencv_python_tags.json  pyproject.toml  requirements.txt  ui.py
LICENSES/: Zlib-glfw.txt
tools/: generate_icon.py
