[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AvatarWebCam"
version = "1.0.0"
description = "VRChat Spout camera output to virtual camera bridge"
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "AvatarWebCam Developer"}
]
keywords = ["vrchat", "spout", "virtual-camera", "obs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "SpoutGL",
    "PyOpenGL",
    "glfw",
    "pyvirtualcam",
    "numpy",
    "opencv-python==4.4.0.46",
    "PySide6",
]

[project.scripts]
avatarwebcam = "main:main"

[tool.setuptools]
py-modules = ["main", "bridge", "ui"]
